# Visium

./: README.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/videos/: page.tsx
frontend/app/videos/[id]/: page.tsx
frontend/components/: theme-provider.tsx
frontend/components/custom/: Empty.tsx  FilterBar.tsx  Header.tsx  Hero.tsx  SearchBar.tsx  VideoCard.tsx  VideosPage.tsx
frontend/components/video/: ClipModal.tsx  ClipStrip.tsx  VideoPlayer.tsx  VideoSection.tsx
frontend/lib/: videoUtils.ts
frontend/types/: video.ts
server/: .env  .env .example  .gitignore  README.md  concat.txt  jobs.json  main.py  manim_agent.py  pyproject.toml  ruff.toml  segments.py  square_and_circle.py  square_to_circle.py  visium_workflow.py  worker.py
server/3b1b_music_library/: download.py
server/app/agents/: manim_agent.py  visium_workflow.py
server/app/db/: database.py  operations.py
server/app/prompts/: manim_agent.py  visium_graph.py
server/app/routes/: get_status.py  modify.py  video.py
server/app/schemas/: main_schema.py  manim_agent.py  manim_agent_schema.py  schema.py  visium_graph.py  visium_graph_schema.py
server/app/services/: audio.py  audio_service.py  llm_call.py  llm_service.py  logging_service.py  pdf_sevice.py  video.py  video_service.py  workflow_service.py
server/app/utils/: worker.py
