[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.1",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.0",
    "langgraph>=1.0.1",
    "manim>=0.19.0",
    "moviepy>=2.2.1",
    "pydantic>=2.12.3",
    "ruff>=0.14.2",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]
